--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<img src="images/malnu.jpg" alt="A man feeding children – Undernutrition project image" />
 					</a>
 					<ul class="actions special">
-						<li><a href="#" class="button large">Undernutrition % in U5 by Demographics & Residence</a></li>
+						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/Percentage_of_undernutrition.R" class="button large">Undernutrition % in U5 by Demographics & Residence</a></li>
 						<li><a href="#" class="button large">Multivariate analysis code</a></li>
 					</ul>
 				</article>
