--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</a>
 					<ul class="actions special">
 						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/Percentage_of_undernutrition.R" class="button large">Undernutrition % in U5 by Demographics & Residence</a></li>
-						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/comparison.ipynb" class="button large">Multivariate analysis code</a></li>
+						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/analysis of the impact.ipynb" class="button large">Multivariate analysis code</a></li>
 					</ul>
 				</article>
 
@@ -120,4 +120,5 @@
 		<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
