--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</a>
 					<ul class="actions special">
 						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/Percentage_of_undernutrition.R" class="button large">Undernutrition % in U5 by Demographics & Residence</a></li>
-						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/analysis of the impact.ipynb" class="button large">Multivariate analysis code</a></li>
+						<li><a href="https://github.com/Abiolaoajayi/abiolaajayi/blob/main/analysis_of_the_impact.ipynb" class="button large">Multivariate analysis code</a></li>
 					</ul>
 				</article>
 
@@ -122,3 +122,4 @@
 	</body>
 
 </html>
+
